# freya-icons

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/codegen/: Cargo.toml
crates/codegen/src/: create_icon_file.rs  main.rs
crates/lib/: Cargo.toml
crates/lib/src/: icon_component.rs  icons.rs  lib.rs
crates/lib/src/icons/: bs_icons.rs  fa_brands_icons.rs  fa_regular_icons.rs  fa_solid_icons.rs  fi_icons.rs  go_icons.rs  hi_outline_icons.rs  hi_solid_icons.rs  io_icons.rs  ld_icons.rs  md_action_icons.rs  md_alert_icons.rs  md_av_icons.rs  md_communication_icons.rs  md_content_icons.rs  md_device_icons.rs  md_editor_icons.rs  md_file_icons.rs  md_hardware_icons.rs  md_home_icons.rs  md_image_icons.rs  md_maps_icons.rs  md_navigation_icons.rs  md_notification_icons.rs  md_places_icons.rs  md_social_icons.rs  md_toggle_icons.rs
examples/: demo.rs
