[package]
name = "freya-icons"
version = "0.1.0"
edition = "2021"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
description = "Easily use icons in your Freya apps."
license = "MIT"
repository = "https://github.com/dioxus-community/freya-icons"
readme = "../../README.md"

[dependencies]
dioxus = { workspace = true }
freya = { workspace = true }

[features]
font-awesome-brands = []
font-awesome-regular = []
font-awesome-solid = []
bootstrap = []
feather = []
octicons = []
hero-icons-outline = []
hero-icons-solid = []
ionicons = []
lucide = []
material-design-icons-action = []
material-design-icons-alert = []
material-design-icons-av = []
material-design-icons-communication = []
material-design-icons-content = []
material-design-icons-device = []
material-design-icons-editor = []
material-design-icons-file = []
material-design-icons-hardware = []
material-design-icons-home = []
material-design-icons-image = []
material-design-icons-maps = []
material-design-icons-navigation = []
material-design-icons-notification = []
material-design-icons-places = []
material-design-icons-social = []
material-design-icons-toggle = []

[package.metadata.docs.rs]
all-features = true
